--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref@ file:///tmp/build/80754af9/asgiref_1605055780383/work
 certifi==2020.11.8
 Django@ file:///tmp/build/80754af9/django_1605066529526/work
+django-cors-headers==3.5.0
 psycopg2@ file:///C:/ci/psycopg2_1594305209841/work
 pytz==2020.1
 SpeechRecognition==3.8.1
